fix: [PD-475] ui alignments fixed

--- a/src/component/GenderButton/GenderButton.style.scss
+++ b/src/component/GenderButton/GenderButton.style.scss
@@ -5,6 +5,7 @@
     flex-direction: row;
 
     &:hover {
+      text-decoration: none;
       text-shadow: 0 0 0.01px black;
     }
 
