--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -136,9 +136,6 @@ main {
     }
   }
 
-  #searchBlock {
-    margin-bottom: 22px;
-  }
 
   .SearchIcon {
     img {
@@ -677,7 +674,7 @@ main {
 }
 
 #overlay-sections {
-  margin-top: -23px !important;
+  margin-top: 4px;
 }
 
 .HeaderSearchSection {
